--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,6 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.flyway.baseline-on-migrate=true
 spring.flyway.baseline-version=1
 
-
+spring.cache.type=redis
 spring.redis.host=localhost
 spring.redis.port=6379
